--- a/package.json
+++ b/package.json
@@ -17,10 +17,11 @@
     "babel-polyfill": "6.8.0",
     "bootstrap": "3.3.6",
     "jquery": "2.2.3",
-    "react": "15.0.2",
-    "react-dom": "15.0.2",
+    "prop-types": "^15.6.1",
+    "react": "^15.5.4",
+    "react-dom": "^15.5.4",
     "react-redux": "4.4.5",
-    "react-router": "2.4.0",
+    "react-router": "^2.4.0",
     "react-router-redux": "4.0.4",
     "redux": "3.5.2",
     "redux-thunk": "2.0.1",
