--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-redux": "4.4.5",
-    "react-router": "^2.4.0",
+    "react-router-dom": "^4.2.2",
     "react-router-redux": "4.0.4",
     "redux": "3.5.2",
     "redux-thunk": "2.0.1",
